2003-04-06  Sebastien Pouliot  <spouliot@videotron.ca>

	* AsymmetricAlgorithm.cs: Moved IsLegalKeySize to KeySizes.cs.
	* DSACryptoServiceProvider.cs: Fix bug where key generation always
	resulted in 1024 bits keypair.
	* KeySizes.cs: Added internal IsLegalKeySize and IsLegal to avoid
	duplication in both AsymmetricAlgorithm and SymmetricAlgorithm.
	* RC2.cs: Modified to use IsLegalKeySize from KeySizes.cs.
	* RSACryptoServiceProvider.cs: Fix bug where key generation always
	resulted in 1024 bits keypair. Should fix unit test failure under
	Linux.
	* SymmetricAlgorithm.cs: Moved IsLegalKeySize to KeySizes.cs.

2003-04-06  Sebastien Pouliot  <spouliot@videotron.ca>

	* CryptoStream.cs: Partial fix for bug #40689 (workaround). Does not 
	throw a NotSupportedException on closing a CryptoStream in read mode
	(like MS does but unlike MS documents).

2003-03-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CryptoStream.cs: fixed the previous fix. MS throws a NotSupportedExc
	when FlushFinalBlock is called twice. I've moved a few lines from Close
	to FlushFinalBlock and added the exception check.

2003-03-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CryptoStream.cs: don't Close the underlying stream in FlushFinalBlock.
	Fixes bug #40394.

2003-03-03  Sebastien Pouliot  <spouliot@videotron.ca>

	* RSACryptoServiceProvider.cs: Delay keypair generation event when 
	keysize is a constructor parameter (major speed improvment when
	importing keys). Removed NotSupportedException when CspParameter is
	used in constructor (required for forthcoming security tools).

2003-02-08  Sebastien Pouliot  <spouliot@videotron.ca>

	* Changes to refer Mono.Math and Mono.Security.Cryptography
	* Changes to refer Mono.Xml

2003-02-04  Sebastien Pouliot  <spouliot@videotron.ca>

	* CryptoConfig.cs: Added initital support for "machine.config" 
	(limited to algorithms, not OIDs). Modified CreateFromName to use
	the fully qualified class names (and removed xmldsig hack). Added